@@ -1,0 +1,5 @@
+Testname: rules-override-dh-foo-does-not-call-dh-foo
+Version: 1.0
+Description: Test for missing calls to dh_foo in override_dh_foo
+Test-For:
+ override_dh_clean-does-not-call-dh_clean
