@@ -1,0 +1,1 @@
+W: rules-override-dh-foo-does-not-call-dh-foo source: override_dh_clean-does-not-call-dh_clean (line 7)
